--- a/assets/css/dqgss.css
+++ b/assets/css/dqgss.css
@@ -8,7 +8,8 @@ body {
   min-width: 110vw;
   left: 50%;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%) scaleX(-1);
+
   /* filter:blur(5px); */
   z-index: -1;
 }
@@ -95,10 +96,11 @@ border-bottom-right-radius:30px; */
 
 .banner-left {
   background-color: #26475A;
-  min-height: 400px;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap:wrap;
 }
 
 .banner-logo {
@@ -253,10 +255,10 @@ a.banner-footer-goto:hover {
   position: relative;
   text-shadow: none;
   display: inline-block;
-  text-align: center;
+  /* text-align: center; */
   padding: 1rem 1.25rem 0.5rem 1.25rem;
-  -webkit-clip-path: polygon(20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 20%);
-  clip-path: polygon(20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 20%);
+  -webkit-clip-path: polygon(5% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 5%);
+  clip-path: polygon(5% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 5%);
   border-radius: 0px;
   margin-right: 1.25rem;
   background-color: rgba(38, 71, 90, 0.4);
@@ -301,6 +303,7 @@ a.banner-footer-goto:hover {
   transition: all 0.3s ease;
   margin-bottom: .25rem;
   background-color: white;
+  /* float:left; */
 }
 
 .services-button:hover img {
@@ -310,7 +313,8 @@ a.banner-footer-goto:hover {
 }
 
 .services-button .text {
-  display: block;
+  /* display: block; */
+  /* margin-left:.5rem; */
 }
 
 nav.fixed-top {
