--- a/assets/css/dqgss.css
+++ b/assets/css/dqgss.css
@@ -37,7 +37,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate3D(-50%, -50%, 0);
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .banner-footer {
