--- a/assets/css/bootstrap.overrides.css
+++ b/assets/css/bootstrap.overrides.css
@@ -2,6 +2,26 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  background: transparent no-repeat center center;
+  background-size: 20px 20px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)!important;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23444' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23444' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+}
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1400px;
